objects/GDT_Activity_Line__c.object
<CustomObject>
    <fields>
        <fullName>Available_elements_date__c</fullName>
        <label>Available elements date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commentary__c</fullName>
        <label>Commentary</label>
        <length>510</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_delivery__c</fullName>
        <label>Date delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_expected__c</fullName>
        <label>Date expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_request__c</fullName>
        <label>Date of request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_Type__c</fullName>
        <label>Deployment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deploy</fullName>
                </value>
                <value>
                    <fullName>Validate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GDT_Activity_Relationship__c</fullName>
        <label>GDT Activity Relationship</label>
        <referenceTo>GDT_Activity__c</referenceTo>
        <relationshipName>GDT_Activity_LineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name_of_Line__c</fullName>
        <label>Name of Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GDT_Activity_LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Type_Line__c</fullName>
        <label>Release Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Application</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Fix</fullName>
                </value>
                <value>
                    <fullName>Hotfix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Succeeded</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GDT Activity Line</label>
    <nameField>
        <displayFormat>{DD}{MM}-{00}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDT Activity Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>